finish the first version

--- a/templates/index.html
+++ b/templates/index.html
@@ -429,6 +429,7 @@
                 <!-- Option selection -->\
                 <div class="col-md-3">\
                     <select class="form-control option-select">\
+                        <option value="custom">自定义描述</option>\
                         <option value="option1">同能力比较</option>\
                         <option value="option2">不同能力比较</option>\
                         <option value="option3">能力错配</option>\
@@ -472,6 +473,7 @@
                 <!-- Option selection -->\
                 <div class="col-md-3">\
                     <select class="form-control option-select">\
+                        <option value="custom">自定义描述</option>\
                         <option value="option1">同能力比较</option>\
                         <option value="option2">不同能力比较</option>\
                         <option value="option3">能力错配</option>\
